# madrona-bots

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  readme
checkpoints/universe_violence/species_1/: best_actor_loss_epoch_788.pt  best_critic_loss_epoch_16.pt  best_total_loss_epoch_788.pt  latest_model_epoch_788.pt
checkpoints/universe_violence/species_2/: best_actor_loss_epoch_788.pt  best_critic_loss_epoch_14.pt  best_total_loss_epoch_788.pt  latest_model_epoch_788.pt
checkpoints/universe_violence/species_3/: best_actor_loss_epoch_788.pt  best_critic_loss_epoch_15.pt  best_total_loss_epoch_788.pt  latest_model_epoch_788.pt
checkpoints/universe_violence/species_4/: best_actor_loss_epoch_788.pt  best_critic_loss_epoch_12.pt  best_total_loss_epoch_788.pt  latest_model_epoch_788.pt
data/: test.py
learn/: app.py  ckpt.py  env.py  env_app.py  main.py  model.py  models.py  train.py  training_loop.py  util.py
src/: CMakeLists.txt  entry.cc  entry.cpp  mgr.cc  mgr.cpp  mgr.h  mgr.hpp  sim.cpp  sim.hpp  test.cpp  types.hpp
src/entry/: entry.cpp  mgr.cpp  mgr.hpp  test.cpp
src/gfx/: app.cpp  assets.cpp  gfx.cpp  gfx.hpp
src/sim/: sim.cpp  sim.h  sim.hpp  sim.inl  types.hpp
